// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI End-to-End Tests should display help information 1`] = `
"Usage: cli [options] [command]

Options:
  -h, --help                        display help for command

Commands:
  checkout [options] <migration>    Check out any repositories that are
                                    candidates for a given migration
  apply [options] <migration>       Apply a migration to all checked out
                                    repositories
  commit [options] <migration>      Commit all changes for the specified
                                    migration
  reset [options] <migration>       Reset all changes for the specified
                                    migration
  push [options] <migration>        Push all changes for the specified
                                    migration
  pr-preview [options] <migration>  View a preview of the PR messages for the
                                    specified migration
  pr [options] <migration>          Create PRs for the specified migration
  pr-status [options] <migration>   Check the status of all PRs for the
                                    specified migration
  list <migration>                  List all checked out repositories for the
                                    given migration
  version                           Print Shepherd version
  help [command]                    display help for command
"
`;

exports[`CLI End-to-End Tests should successfully checkout using repos flag 1`] = `
"Using 2 selected repos

[aorinevo/shepherd-test-repo-1] 1/2
> Running should_migrate steps
✔ Completed all should_migrate steps successfully
> Running post_checkout steps
✔ Completed all post_checkout steps successfully

[aorinevo/shepherd-test-repo-2] 2/2
> Running should_migrate steps
✔ Completed all should_migrate steps successfully
> Running post_checkout steps
✔ Completed all post_checkout steps successfully

Checked out 2 out of 2 repos
"
`;

exports[`CLI End-to-End Tests should successfully run apply on a migration 1`] = `
"
[NerdWalletOSS/shepherd] 1/1
ℹ Running apply steps
$ touch $SHEPHERD_REPO_DIR/testfile.js && echo "some content" > $SHEPHERD_REPO_DIR/testfile.js
Step "touch $SHEPHERD_REPO_DIR/testfile.js && echo "some content" > $SHEPHERD_REPO_DIR/testfile.js" exited with 0
✔ Completed all apply steps successfully
"
`;

exports[`CLI End-to-End Tests should successfully run apply on a migration 2`] = `
"On branch 2024.10.06-test-migration
Untracked files:
  (use "git add <file>..." to include in what will be committed)
	testfile.js

nothing added to commit but untracked files present (use "git add" to track)
"
`;

exports[`CLI End-to-End Tests should successfully run checkout on a migration 1`] = `
"
[NerdWalletOSS/shepherd] 1/1
> Running should_migrate steps
✔ Completed all should_migrate steps successfully
> Running post_checkout steps
✔ Completed all post_checkout steps successfully

Checked out 1 out of 1 repos
"
`;
